@startuml
'https://plantuml.com/class-diagram

abstract class Car
class Sedan
class Coupe
class Convertible

interface Handling
class SafetyHandling


Sedan --|> Car
Coupe --|> Car
Convertible --|> Car

SafetyHandling ..|> Handling
SportHandling ..|> Handling
RacingHandling ..|> Handling

Car --> Handling : uses

Sedan ..> SafetyHandling : creates
Coupe ..> SportHandling : creates
Convertible ..> RacingHandling : creates

@enduml